--- a/pom.xml
+++ b/pom.xml
@@ -147,10 +147,19 @@
 			<artifactId>spring-session</artifactId>
 			<version>1.0.2.RELEASE</version>
 		</dependency>
+
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-redis</artifactId>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>1.6.2.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-core</artifactId>
+			<version>1.2.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
