--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,6 @@
 		<version>1.3.2.RELEASE</version>
 	</parent>
 
-
-
 	<build>
 		<plugins>
 			<plugin>
@@ -37,22 +35,34 @@
 	<properties>
 		<!-- <jetty.version>8.1.15.v20140411</jetty.version> -->
 		<!-- <jetty-jsp.version>2.2.0.v201112011158</jetty-jsp.version> -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<start-class>com.naturalprogrammer.spring.email.NaturalprogrammerSpringEmailApplication</start-class>
+		<java.version>1.8</java.version>
+		<tomcat.version>8.0.32</tomcat.version>
 		<commons-codec.version>1.10</commons-codec.version>
 		<commons-lang3.version>3.4</commons-lang3.version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<commons-beanutils.version>1.7.0</commons-beanutils.version>
-
 		<freemarker.version>2.3.19</freemarker.version>
-
 		<pinyin4j.version>2.5.0</pinyin4j.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
-			<version>1.3.2.RELEASE</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -63,8 +73,19 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		    <version>1.4.0.BUILD-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -82,9 +103,9 @@
 			<version>3.2.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jetty</artifactId>
-			<scope>provided</scope>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.10</version>
 		</dependency>
 
 		<dependency>
